--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<app-input-form></app-input-form>
+<li *ngFor="entry of entries">
+    <app-single-entry></app-single-entry>
+  </li>
