basic functionality working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-input-form></app-input-form>
+<app-input-form (onSubmitEntry)="addNewEntry($event)"></app-input-form>
 <app-single-entry *ngFor="let entry of entries" [entry]="entry"></app-single-entry>
