--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 body
 {
     margin:0;
-    //background-color: black;
-    //color:white;
+    background-color: black;
+    color:white;
+    font-family: Roboto;
 }
