--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -12,6 +12,7 @@
      padding-left: 20px;
      border: 0px;
      font-weight: bolder;
+     caret-color: red;
 
      ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
             color: grey;
