--- a/src/app/components/input-form/input-form.component.html
+++ b/src/app/components/input-form/input-form.component.html
@@ -1,4 +1,5 @@
+<div class="form-wrap">
 <form (ngSubmit)="submitEntry()">
   <input [(ngModel)]="inputBody" name="entry-input" placeholder="What did you learn today?"  autocomplete="off"/>
-  <button>Add</button>
 </form>
+</div>
