--- a/src/styles/app.component.scss
+++ b/src/styles/app.component.scss
@@ -1,4 +1,12 @@
 .entries-wrap
 {
-    margin-top: 300px;
+   // width:80%;
+   
+   margin-top: 300px;
+}
+
+.app-wrap
+{
+    //width: 80vw;
+    //margin: 0 auto;
 }
