--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -1,25 +1,39 @@
- input{
-     background-color: black;
-     color:white;
-     font-family: Roboto;
-     width:100%;
-     height:300px;
-     margin: 0 auto;
-     top:0;right:0;left:0;
-     position: fixed;
-     display: block;
-     font-size: 80px;
-     padding-left: 20px;
-     border: 0px;
-     font-weight: bolder;
-     caret-color: red;
+ .form-wrap
+ {
+    position: fixed;
+    top:0;
+    padding:20px 0;
+    width:100%;
+    height:200px;
+    box-shadow: 0 2px 4px rgba(50,50,93,.1);
+    background-color: white;
 
-     ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-            color: grey;
-    }
-
-    &:focus
+    form
     {
-        outline: none;
+        height: 100%;
+        width: 100%;
+    }
+    input
+    {
+        color:pink;
+        font-family: Roboto;
+        width:100%;
+        height:100%;
+        display: block;
+        font-size: 80px;
+        padding: 0 20px;
+        border: 0px;
+        font-weight: bolder;
+        caret-color: pink;
+
+        ::-webkit-input-placeholder 
+        { 
+            color: grey;
+        }
+
+        &:focus
+        {
+            outline: none;
+        }
     }
  }
