--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 body
 {
     margin:0;
-    background-color: black;
-    color:white;
+    //background-color: black;
+    //color:white;
     font-family: Roboto;
 }
