--- a/src/app/components/input-form/input-form.component.html
+++ b/src/app/components/input-form/input-form.component.html
@@ -1,5 +1,5 @@
-<div class="form-wrap">
+<div class="form-wrap" [class.shrunk] = "isShrunk" >
 <form (ngSubmit)="submitEntry()">
-  <input [(ngModel)]="inputBody" name="entry-input" placeholder="What did you learn today?"  autocomplete="off"/>
+  <input [(ngModel)]="inputBody" name="entry-input" placeholder="What did you learn today?" autofocus autocomplete="off"/>
 </form>
 </div>
