--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -5,35 +5,47 @@
     padding:20px 0;
     width:100%;
     height:200px;
-    box-shadow: 0 2px 4px rgba(50,50,93,.1);
+    box-shadow: 0 2px 50px rgba(50,50,93,1);
     background-color: white;
+    z-index: 99;
+    font-size: 70px;
+    transition: height 0.3s ease, font-size 0.3s ease 0.3s;
 
     form
     {
         height: 100%;
-        width: 100%;
+        width: 100%;background-color: white;
     }
     input
     {
-        color:pink;
-        font-family: Roboto;
+        color:#89aeed;
+        font-family: inherit;
+         font-size: inherit;
         width:100%;
         height:100%;
         display: block;
-        font-size: 80px;
-        padding: 0 20px;
+       
+        padding: 0 30px;
         border: 0px;
-        font-weight: bolder;
-        caret-color: pink;
+        //caret-color: rgba(50,50,93,.3);
 
-        ::-webkit-input-placeholder 
-        { 
-            color: grey;
-        }
 
+        
         &:focus
         {
             outline: none;
         }
+    }
+
+    ::-webkit-input-placeholder 
+    { 
+        color:rgba(155, 155, 155,0.6);
+       // font-weight: lighter;
+    }
+
+    &.shrunk
+    {
+        height:100px;
+        font-size: 30px;
     }
  }
