--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+html,body{min-height: 100%}
+
 body
 {
     margin:0;
-    //background-color: black;
     //color:white;
-    font-family: Roboto;
+    font-family: 'Open Sans';
+    font-weight: normal;
+    background-color: black;
 }
