--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -5,11 +5,11 @@
     padding:20px 0;
     width:100%;
     height:200px;
-    box-shadow: 0 2px 50px rgba(50,50,93,1);
+    box-shadow: 0 2px 50px rgba(50,50,93,0.3);
     background-color: white;
     z-index: 99;
     font-size: 70px;
-    transition: height 0.3s ease, font-size 0.3s ease 0.3s;
+    transition: height 0.3s ease , font-size 0.3s ease 0.3s;
 
     form
     {
@@ -18,14 +18,14 @@
     }
     input
     {
-        color:#89aeed;
+        color:black;
         font-family: inherit;
          font-size: inherit;
         width:100%;
         height:100%;
         display: block;
-       
-        padding: 0 30px;
+        font-weight: bold;
+        padding: 0 40px;
         border: 0px;
         //caret-color: rgba(50,50,93,.3);
 
@@ -47,5 +47,6 @@
     {
         height:100px;
         font-size: 30px;
+        transition: height 0.3s ease 0.3s, font-size 0.3s ease ;
     }
  }
