--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@ body
 {
     margin:0;
     //color:white;
-    font-family: 'Open Sans';
+    font-family: 'Roboto';
     font-weight: normal;
-    background-color: black;
+   // background-color: black;
 }
