--- a/src/styles/app.component.scss
+++ b/src/styles/app.component.scss
@@ -2,7 +2,7 @@
 {
    // width:80%;
    
-   margin-top: 240px;
+   margin-top: 270px;
 }
 
 
@@ -10,7 +10,18 @@
 {
     //width: 80vw;
     //margin: 0 auto;
-    
+    .header-wrap
+    {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        //height:300px;
+        top:0;
+        z-index: 1;
+        justify-content: space-between;
+
+    }
 
     .bg-image
     {
