--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -1,13 +1,12 @@
  .form-wrap
  {
-    position: fixed;
-    top:0;
+    position: relative;
     padding:20px 0;
     width:100%;
-    height:200px;
+    height:150px;
     box-shadow: 0 2px 50px rgba(50,50,93,0.3);
     background-color: white;
-    z-index: 99;
+    z-index: 100;
     font-size: 70px;
     transition: height 0.3s ease , font-size 0.3s ease 0.3s;
 
