--- a/src/styles/dashboard.component.scss
+++ b/src/styles/dashboard.component.scss
@@ -1,13 +1,15 @@
 :host
 {
-   position: relative;
-   padding: 30px 40px 0px 40px;
-   top:0;
-   font-size: 30px;
-   width: 100%;
-   background-color: white;
-   z-index: 101;
-   color:rgba(50,50,93,0.3);
-   font-weight: bold;
-   min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding: 30px 40px 0px 40px;
+    top:0;
+    font-size: 30px;
+    width: calc(100% - 80px);
+    background-color: white;
+    z-index: 101;
+    color:rgba(50,50,93,0.3);
+    font-weight: bold;
+    min-height: 40px;
 }
