--- a/src/styles/app.component.scss
+++ b/src/styles/app.component.scss
@@ -2,7 +2,7 @@
 {
    // width:80%;
    
-   margin-top: 270px;
+   margin-top: 205px;
 }
 
 
@@ -20,6 +20,7 @@
         top:0;
         z-index: 1;
         justify-content: space-between;
+        box-shadow: 0 2px 50px rgba(50, 50, 93, 0.3);
 
     }
 
