Fixed localStorage error, I literally can't spell

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,2 @@
 <span>{{currentTime  | date:'shortTime'}}</span>
-<span *ngIf="userLocation">{{userLocation.location.city + ',' + userLocation.location.region}}</span>
+<span *ngIf="userLocation.location">{{userLocation.location.city + ',' + userLocation.location.region}}</span>
