added entering link functionality

--- a/src/app/components/single-entry/single-entry.component.html
+++ b/src/app/components/single-entry/single-entry.component.html
@@ -1,2 +1,2 @@
 <h2 class="entry-date">{{entry.date | date}}</h2>
-<h1 class="entry-body">{{entry.body}}</h1>
+<p class="entry-body" [innerHTML]="entryBody"></p>
