--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,5 @@ body
     //color:white;
     font-family: 'Roboto';
     font-weight: normal;
-   // background-color: black;
+    background-color: #f0f0f0;
 }
