--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -4,7 +4,7 @@
     padding:15px 0;
     width:100%;
     height:130px;
-    background-color: white;
+    background-color: #f0f0f0;
     z-index: 100;
     font-size: 60px;
     transition: height 0.3s ease , font-size 0.3s ease 0.3s;
@@ -12,7 +12,7 @@
     form
     {
         height: 100%;
-        width: 100%;background-color: white;
+        width: 100%;
     }
     input
     {
@@ -25,6 +25,7 @@
         font-weight: bold;
         padding: 0 40px;
         border: 0px;
+        background-color: transparent;
         //caret-color: rgba(50,50,93,.3);
 
 
