--- a/src/styles/single-entry.component.scss
+++ b/src/styles/single-entry.component.scss
@@ -21,7 +21,8 @@
     }
     .entry-body
     {
-        margin-bottom:0;
-        font-size: 50px;
+        margin: 20px 0 0 0;
+        font-size: 30px;
+        color: grey;
     }
 }
