added same day entry functionality and styles

--- a/src/app/components/single-entry/single-entry.component.html
+++ b/src/app/components/single-entry/single-entry.component.html
@@ -1,2 +1,2 @@
 <h2 class="entry-date">{{entry.date | date}}</h2>
-<p class="entry-body" [innerHTML]="entryBody"></p>
+<p class="entry-body" *ngFor="let li of bodyList; trackBy: trackByFn" [innerHTML]="li"></p>
