--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -1,10 +1,12 @@
+@import './variables';
+
  .form-wrap
  {
     position: relative;
     padding:15px 0;
     width:100%;
     height:130px;
-    background-color: #f0f0f0;
+    background-color: $light-grey;
     z-index: 100;
     font-size: 60px;
     transition: height 0.3s ease , font-size 0.3s ease 0.3s;
@@ -16,7 +18,7 @@
     }
     input
     {
-        color:black;
+        color:$text-grey;
         font-family: inherit;
         font-size: inherit;
         width:100%;
