--- a/src/styles/single-entry.component.scss
+++ b/src/styles/single-entry.component.scss
@@ -1,3 +1,4 @@
+@import './variables';
 :host
 {
     background-color: rgba(255,255,255,1);
@@ -17,12 +18,14 @@
     {
         font-size: 20px;
         margin:0;
-        color: lightskyblue;
+        color: $light-blue;
     }
     .entry-body
     {
         margin: 20px 0 0 0;
-        font-size: 30px;
-        color: grey;
-    }
+        font-size: 40px;
+        color:$text-grey;
+        line-height: 55px;
+    }    
 }
+
