--- a/src/styles/single-entry.component.scss
+++ b/src/styles/single-entry.component.scss
@@ -30,6 +30,13 @@
         li
         {
             list-style: none;
+            cursor: pointer;
+            transition: color 0.3s ease-in;
+
+            &:hover
+            {
+                color:#eee;
+            }
         }
     }    
 }
