--- a/src/styles/single-entry.component.scss
+++ b/src/styles/single-entry.component.scss
@@ -16,16 +16,10 @@
 
     .entry-date
     {
-        font-size: 20px;
-        margin:0;
+        font-size: 30px;
+        margin:20px 0 40px 0;
         color: $light-blue;
     }
-    .entry-body
-    {
-        margin: 20px 0 0 0;
-        font-size: 40px;
-        color:$text-grey;
-        line-height: 55px;
-    }    
+    
 }
 
