--- a/src/app/components/single-entry-list-item/single-entry-list-item.component.html
+++ b/src/app/components/single-entry-list-item/single-entry-list-item.component.html
@@ -1,1 +1,3 @@
- <li [innerHTML]="listItemBody" (mouseover)='isQueriable(i)' [class.ishoverable]="isHoverable"></li>
+ <li class="list-item-text" [innerHTML]="listItemBody" >
+ </li>
+ <a class="query-button" [hidden]="!isQueriable" [attr.href]="'http://www.google.com/search?q=' + nouns"><span>Search for {{nouns}}</span></a>
