--- a/src/styles/single-entry-list-item.component.scss
+++ b/src/styles/single-entry-list-item.component.scss
@@ -1,11 +1,44 @@
-li
+@import './variables';
+:host
 {
-    list-style: none;
-    transition: color 0.3s ease-in;
+    display: flex;
+    //justify-content: space-between;
+    flex-direction: column;
+    margin: 20px 0 0 0;
+    min-height: 80px;
 
-    &.ishoverable
+    .query-button
     {
+        opacity: 0;
         cursor: pointer;
-        color:#eee;
+        -webkit-appearance: none;
+        border: none;
+        background-color: white;
+        //width: 200px;
+        font-family: inherit;
+        text-decoration: underline;
+        transition: opacity 0.3s ease;
+        color: grey;
+        text-align: left;
+        word-wrap: nowrap;
+    }
+
+    .list-item-text
+    {
+        list-style: none;
+        transition: color 0.3s ease-in;
+        
+        font-size: 40px;
+        color:$text-grey;
+        line-height: 55px;
+
+    }
+
+    &:hover
+    {
+        .query-button
+        {
+            opacity: 0.7;
+        }
     }
 }
