renamed entries, working on delete

--- a/src/styles/app.component.scss
+++ b/src/styles/app.component.scss
@@ -2,8 +2,8 @@
 {
    // width:80%;
    background-color: white;
-   min-height: calc(100% - 220px);
-   margin-top: 220px;
+   min-height: calc(100% - 233px); //need to wrap in dashboard variable
+   margin-top: 233px;
    width: 100%;
    position: absolute;
 }
