--- a/src/styles/dashboard.component.scss
+++ b/src/styles/dashboard.component.scss
@@ -1,4 +1,4 @@
-:host
+.dashboard-wrap
 {
     display: flex;
     justify-content: space-between;
@@ -20,6 +20,7 @@
         display: flex;
         align-content: right;
         width: 100%;
+        min-height: 25px;
     }
 
     .row1 
