--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
-<div class="row1">
-    <span>{{currentTime  | date:'shortTime'}}</span>
-    <span>{{userTemperature}}</span>
-</div>
-<div class="row2">
-    <span>{{userArea}}</span>
-    
-    <span>{{userWeather}}</span>
+<div *ngIf="userLocation" class="dashboard-wrap">
+    <div class="row1">
+        <span>{{currentTime  | date:'shortTime'}}</span>
+        <span>{{userTemperature}}</span>
+    </div>
+    <div class="row2">
+        <span>{{userArea}}</span>
+        
+        <span>{{userWeather}}</span>
+    </div>
 </div>
