--- a/src/styles/sub-entry.component.scss
+++ b/src/styles/sub-entry.component.scss
@@ -4,7 +4,7 @@
     display: flex;
     //justify-content: space-between;
     flex-direction: column;
-    margin: 20px 0 0 0;
+    margin: 10px 0 0 0;
     min-height: 80px;
 
     .query-button
@@ -21,6 +21,7 @@
         color: grey;
         text-align: left;
         word-wrap: nowrap;
+        font-size: 15px;
     }
 
     .list-item-text
@@ -31,6 +32,11 @@
         font-size: 40px;
         color:$text-grey;
         line-height: 55px;
+
+        &:before 
+        {
+            content: '- '
+        }
 
     }
 
