--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 @import './variables';
+
+@font-face {
+    font-family: 'Roboto-Regular';
+    src: url('../assets/Roboto/Roboto-Regular.ttf');
+}
 
 html,body{min-height: 100%}
 
@@ -8,8 +11,7 @@ body
 {
     margin:0;
     //color:white;
-    font-family: 'Roboto';
-    font-weight: normal;
+    font-family: 'Roboto-Regular';
     background-color: $light-grey;
 }
 
