--- a/src/styles/sub-entry.component.scss
+++ b/src/styles/sub-entry.component.scss
@@ -21,6 +21,8 @@
         text-align: left;
         word-wrap: nowrap;
         font-size: 15px;
+        padding: 0;
+        margin-right: 4px;
     }
 
     .list-item-text
