cleaning up before publish

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,19 @@
     font-family: 'Roboto-Regular';
     src: url('../assets/Roboto/Roboto-Regular.ttf');
 }
+@font-face {
+    font-family: 'Roboto-Light';
+    src: url('../assets/Roboto/Roboto-Light.ttf');
+}
+@font-face {
+    font-family: 'Roboto-Medium';
+    src: url('../assets/Roboto/Roboto-Medium.ttf');
+}
+@font-face {
+    font-family: 'Roboto-Bold';
+    src: url('../assets/Roboto/Roboto-Medium.ttf');
+}
+
 
 html,body{min-height: 100%}
 
