--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -24,11 +24,10 @@
         width:100%;
         height:100%;
         display: block;
-        font-weight: bold;
+        font-family: 'Roboto-Bold';
         padding: 0 40px;
         border: 0px;
         background-color: transparent;
-        //caret-color: rgba(50,50,93,.3);
 
 
         
@@ -41,7 +40,6 @@
     ::-webkit-input-placeholder 
     { 
         color:rgba(155, 155, 155,0.6);
-       // font-weight: lighter;
     }
 
     &.shrunk
