--- a/src/styles/input-form.component.scss
+++ b/src/styles/input-form.component.scss
@@ -28,6 +28,8 @@
         padding: 0 40px;
         border: 0px;
         background-color: transparent;
+        width: calc(100% - 80px);
+
 
 
         
